body overflow bug fixed

--- a/modules/picture-vr/styles.css
+++ b/modules/picture-vr/styles.css
@@ -4,6 +4,8 @@
 
 .modal-picture-viewer{
     display: none;
+    
+    overflow: hidden;
 
     -webkit-flex-direction: column; /* Safari 6.1+ */
     flex-direction: column;
